Alignement fixe des éléments "à la une" de la page d'accueil

--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,7 @@ nav a {
 .starred {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     background-color: #C4DAC6;
 }
 
